--- a/wedding/index.html
+++ b/wedding/index.html
@@ -3,7 +3,7 @@
     <title>My Website Home Page 2</title>
 </head>
 <body>
-    <h1>Yo, welcome to my website</h1>
+    <h1>Future wedding page</h1>
     <p>Now hosted on Github.</p>
 </body>
 </html>
