Added skeleton file structure

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -5,5 +5,12 @@
 <body>
     <h1>Future wedding page</h1>
     <p>Now hosted on Github.</p>
+    <ul>
+        <li><a href="/details">Details</a></li>
+        <li><a href="/participants">Participants</a></li>
+        <li><a href="/accomodations">Accomodations</a></li>
+        <li><a href="/registry">Registry</a></li>
+        <li><a href="/photos">Photos</a></li>
+    </ul>
 </body>
 </html>
