--- a/wedding/index.html
+++ b/wedding/index.html
@@ -6,11 +6,11 @@
     <h1>Future wedding page</h1>
     <p>Now hosted on Github.</p>
     <ul>
-        <li><a href="/details">Details</a></li>
-        <li><a href="/participants">Participants</a></li>
-        <li><a href="/accomodations">Accomodations</a></li>
-        <li><a href="/registry">Registry</a></li>
-        <li><a href="/photos">Photos</a></li>
+        <li><a href="/details/index.html">Details</a></li>
+        <li><a href="/participants/index.html">Participants</a></li>
+        <li><a href="/accomodations/index.html">Accomodations</a></li>
+        <li><a href="/registry/index.html">Registry</a></li>
+        <li><a href="/photos/index.html">Photos</a></li>
     </ul>
 </body>
 </html>
